@@ -78,9 +78,9 @@
   <simpara>
    The fourth field, <emphasis>options</emphasis>, is an optional comma-separated
    list of options and/or flags describing the device type (<emphasis>luks</emphasis>,
-   <emphasis>tcrypt</emphasis>, or <emphasis>plain</emphasis> which is also the default)
-   and cryptsetup options associated with the encryption process.  The supported options
-   are described below.
+   <emphasis>tcrypt</emphasis>, <emphasis>bitlk</emphasis>, or <emphasis>plain</emphasis>
+   which is also the default) and cryptsetup options associated with the encryption process.
+   The supported options are described below.
    For plain dm-crypt devices the <emphasis>cipher</emphasis>, <emphasis>hash</emphasis>
    and <emphasis>size</emphasis> options are required.
    Some options can be changed on active mappings using
@@ -281,6 +281,16 @@
     <term><emphasis>plain</emphasis></term>
     <listitem>
      <simpara>Force plain encryption mode.</simpara>
+    </listitem>
+   </varlistentry>
+
+   <varlistentry>
+    <term><emphasis>bitlk</emphasis></term>
+    <listitem>
+     <simpara>
+       Force BITLK (Windows BitLocker-compatible) mode.
+       WARNING: <emphasis>crypttab</emphasis> support is currently experimental.
+     </simpara>
     </listitem>
    </varlistentry>
 
